name:                field
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/field#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Control.Monad.Field
  build-depends:       base >= 4.7 && < 5
                     , generic-lens
                     , lens
                     , monad-control
                     , mtl
                     , tagged
                     , transformers
                     , transformers-base
  default-language:    Haskell2010
  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , KindSignatures
                    , MultiParamTypeClasses
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , UndecidableInstances

test-suite example-usage
  type:                exitcode-stdio-1.0
  hs-source-dirs:      example
  main-is:             Main.hs
  other-modules:       Services
                     , Services.Logger
                     , Services.UserAuth
  build-depends:       base
                     , field
                     , generic-lens
                     , lens
                     , mtl
                     , text
                     , transformers-base
  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , KindSignatures
                    , MultiParamTypeClasses
                    , OverloadedStrings
                    , PolyKinds
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , UndecidableInstances
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-tools: autoexporter

test-suite field-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , field
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/field
